[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polyflow-dev-ai"
version = "1.0.1"
description = "PolyFlow"
readme = "README.md"
authors = [
    {name = "Mohammad Tanzil", email = "idrisitanzil@beloit.edu"}
]

requires-python = ">=3.10, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "backoff>=2.2.1,<3.0.0",
    "faiss-cpu>=1.8.0.post1,<2.0.0",
    "litellm>=1.51.0,<2.0.0",
    "numpy>=1.25.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "sentence-transformers>=3.0.1,<4.0.0",
    "tiktoken>=0.7.0,<1.0.0",
    "tqdm>=4.66.4,<5.0.0",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
]
xml = [
    "lxml",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Select a minimal set of rules
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]


# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = false
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"**/{docs}/*" = ["ALL"]
"**__init__.py" = ["ALL"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true